[package]
name = "i32lib"
version = "0.1.0"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "i32lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 2

[dependencies]
rustc_version_runtime = "0.1.5"
